ppx/tests/failing/8.ml
let _foo = fun [@reaml.componnt "Foo"] () -> ()
